--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
 	"name": "mockup-template",
+	"description": "This template system accelerates mockups for landing pages, websites, and web apps.",
 	"private": true,
 	"version": "1.0.0",
 	"type": "module",
